--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">AndroidSample</string>
     <string name="button_counter_text">"Count"</string>
+    <string name="general_error_fetching">An error occurred while retrieving the data. Please try again later.</string>
+    <string name="github_user_fetch_error">An error occurred while retrieving this GitHub user information. Please try again later.</string>
 </resources>
